# linsplit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: linsplit_data.rs  main.rs
src/livesplitone/: commands.rs  livesplitone.rs  mod.rs
src/memory_reader/: everest_reader.rs  flags.rs  game_data.rs  mem_reader.rs  mod.rs  reader.rs  vanilla_reader.rs
src/split_reader/: mod.rs  split_reader.rs
src/splitter_logic/: mod.rs  splitter_logic.rs
