[package]
name = "linsplit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
expand-tilde = "0.6.1"
futures-util = "0.3.31"
procfs = "0.18.0"
roxmltree = "0.21.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.148"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.28.0"
